updated Hobby page link

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       </ol> 
       
       <br>
-      <a href="D:\Web Development\HTML - Personal Site\hobby.html" > Hobbies</a>
+      <a href="hobby.html" > Hobbies</a>
       <p><a href="D:\Web Development\HTML - Personal Site\Contact.html"> Contact Information</a> </p>
 
 </body>
